eFile (Frontend page build)

--- a/EleFiCNetMVC/EleFiCNetMVC/Views/Home/eFile.cshtml
+++ b/EleFiCNetMVC/EleFiCNetMVC/Views/Home/eFile.cshtml
@@ -2,3 +2,178 @@
 @model EleFiCNetMVC.Views.Home.eFileModel
 @{
 }
+
+<body>
+
+    <!--HERO AREA-->
+    <section id="emergency-banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="block">
+                        <h>How can we help you?</h>
+                        <p>
+                            Your well-being is our priority.<br /> We genuinely care about you, aiming to simplify and enhance your life
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- PATIENT RECORD FORM-->
+    <form >
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card mb-4">
+                        <div class="card-body text-center">
+                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                                 class="rounded-circle img-fluid" style="width: 150px;">            
+                        </div>
+                    </div>
+                </div>
+                <!-- First Name input -->
+                <div class="col-lg-8">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">First Name</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="text"  class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Last Name input -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Last Name</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="text" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                             <!-- Phone input -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Phone</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="number"  class="form-control" />
+                                        <br />
+                                        <input type="number" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+
+                            <!-- Email input -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Email</p>
+                                </div>
+                                <div class="col-sm-9">
+                                     <div data-mdb-input-init class="form-outline mb-4">
+                                         <input type="email"  class="form-control" />    
+                                     </div>
+                                </div>
+                            </div>
+                            <hr>
+
+                            <!-- Address input -->
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Address</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="number" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Medical Records input -->
+                            <hr />
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Medical Records</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline mb-4">
+                                        <textarea class="form-control"  rows="7"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Personal Doctors Info input -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Personal Doctors Info</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="number" class="form-control" />
+                                        <br />
+                                        <input type="number" class="form-control" />
+                                        <br />
+                                        <input type="email"  class="form-control" />  
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <!-- Personal Pharmacy Info input -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Personal Pharmacy Info</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div data-mdb-input-init class="form-outline">
+                                        <input type="number" class="form-control" />
+                                        <br />
+                                        <input type="number" class="form-control" />
+                                        <br />
+                                        <input type="email" class="form-control" />
+                                    </div>
+                                </div>
+							</div> 
+                            
+                            <!-- Checkbox -->
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Create an account?</p>
+                                </div>
+                                <div class="col-sm-9">
+                            <div class="form-check d-flex justify-content-center mb-4">
+                                <input class="form-check-input me-2"
+                                       type="checkbox"
+                                       value="" 
+                                        id="form6Example8"
+                                       checked />
+                            </div>
+                                </div>
+                            </div>
+                            <!-- Submit button -->
+                             <hr>
+                            <div class="row">
+                                <div class="text-center ">
+									<button data-mdb-ripple-init type="button" class="btn btn-primary btn-block mb-4">Submit</button>
+								</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+
+</body>
